--- a/Project 2 Customer Testimonials Pages.html
+++ b/Project 2 Customer Testimonials Pages.html
@@ -3,28 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Goofy Website</title>
+    <title>Simple Website</title>
     <style>
+        /* Add your CSS styles here */
         body {
             font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
             text-align: center;
         }
-        h1 {
-            color: blue;
-        }
-        p {
-            color: green;
-        }
-        .goofy-img {
-            width: 200px;
-            border-radius: 50%;
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to the Goofy Website!</h1>
-    <p>This website is dedicated to professor Yuan Yuan!</p>
-    <p>Might write some stuff about Project 2!</p>
-    <p>Cheers!</p>
+    <header>
+        <h1>Simple Website</h1>
+    </header>
+
+    <main>
+        <section>
+            <h2>Welcome to my website!</h2>
+            <p>This is a simple website created with HTML.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Simple Website. All rights reserved.</p>
+    </footer>
 </body>
 </html>
+
