--- a/index.html
+++ b/index.html
@@ -44,5 +44,12 @@
         <p>&copy; 2024 Simple Website. All rights reserved.</p>
     </footer>
 </body>
+
+<a href="https://ethanhaeberle.github.io/MGMT382group10/companyhistory&team">Company History</a>
+<a href="https://ethanhaeberle.github.io/MGMT382group10/products">Products</a>
+<a href="https://ethanhaeberle.github.io/MGMT382group10/services">Services</a>
+<a href="https://ethanhaeberle.github.io/MGMT382group10/testimonials">Customer testimonials</a>
+<a href="https://ethanhaeberle.github.io/MGMT382group10/teampage">Teampage</a>
+
 </html>
 
