--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
     </style>
 </head>
 <body>
+  <frameset cols="200, *">
+
+  <frame src="frame_a.html">
+  <frame src="frame_b.html" name="showframe">
+    
+  </frameset>
     <header>
         <h1>Simple Website</h1>
     </header>
