--- a/index.html
+++ b/index.html
@@ -28,13 +28,11 @@
         }
     </style>
 </head>
+<frameset cols="25%,75%">
+    <frame src="menu.html" name="menu">
+    <frame src="main_content.html" name="main">
+</frameset>
 <body>
-  <frameset cols="200, *">
-
-  <frame src="frame_a.html">
-  <frame src="frame_b.html" name="showframe">
-    
-  </frameset>
     <header>
         <h1>Simple Website</h1>
     </header>
