--- a/index.html
+++ b/index.html
@@ -29,31 +29,9 @@
     </style>
 </head>
 <frameset cols="25%,75%">
-    <frame src="menu.html" name="menu">
-    <frame src="main_content.html" name="main">
+    <frame src="https://ethanhaeberle.github.io/MGMT382group10/menu.html" name="menu">
+    <frame src="https://ethanhaeberle.github.io/MGMT382group10/main_content.html" name="main">
 </frameset>
-<body>
-    <header>
-        <h1>Simple Website</h1>
-    </header>
-
-    <main>
-        <section>
-            <h2>Welcome to my website!</h2>
-            <p>This is a simple website created with HTML.</p>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2024 Simple Website. All rights reserved.</p>
-    </footer>
-</body>
-
-<a href="https://ethanhaeberle.github.io/MGMT382group10/companyhistory&team">Company History</a>
-<a href="https://ethanhaeberle.github.io/MGMT382group10/products">Products</a>
-<a href="https://ethanhaeberle.github.io/MGMT382group10/services">Services</a>
-<a href="https://ethanhaeberle.github.io/MGMT382group10/testimonials">Customer testimonials</a>
-<a href="https://ethanhaeberle.github.io/MGMT382group10/teampage">Teampage</a>
 
 </html>
 
