--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </style>
 </head>
 <frameset cols="25%,75%">
-    <frame src="https://ethanhaeberle.github.io/MGMT382group10/menu.html" name="menu">
-    <frame src="https://ethanhaeberle.github.io/MGMT382group10/main_content.html" name="main">
+    <frame src="menu.html" name="menu">
+    <frame src="main_content.html" name="main">
 </frameset>
 
 </html>
