--- a/menu.html
+++ b/menu.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<html>
+<a href="https://ethanhaeberle.github.io/MGMT382group10/companyhistory&team">Company History</a>
+<a href="https://ethanhaeberle.github.io/MGMT382group10/products">Products</a>
+<a href="https://ethanhaeberle.github.io/MGMT382group10/services">Services</a>
+<a href="https://ethanhaeberle.github.io/MGMT382group10/testimonials">Customer testimonials</a>
+<a href="https://ethanhaeberle.github.io/MGMT382group10/teampage">Teampage</a>
+</html>
