--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <html>
+<head>
+  
+</head>
+<body>
 <a href="https://ethanhaeberle.github.io/MGMT382group10/companyhistory&team">Company History</a>
 <br>
 <a href="https://ethanhaeberle.github.io/MGMT382group10/products">Products</a>
@@ -10,4 +14,5 @@
 <a href="https://ethanhaeberle.github.io/MGMT382group10/testimonials">Customer testimonials</a>
 <br>
 <a href="https://ethanhaeberle.github.io/MGMT382group10/teampage">Teampage</a>
+  </body>
 </html>
