--- a/testimonials.html
+++ b/testimonials.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Customer Testimonials</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Customer Testimonials</h1>
+</header>
+
+<div class="container">
+    <h2>Please Read Our Raving Reviews!</h2>
+    <p> <u><b>Customer 1:</b></u>
+    <i>C&C's cooking cabin always knows exactly what I need for my next recipe!</i></p>
+    
+</div>
+
+</body>
+</html>
 
