--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,7 @@
   
 </head>
 <body>
+<h1> Christie and Chris’s Cooking Cabin </h1>
 <br>
 <a href="https://ethanhaeberle.github.io/MGMT382group10/companyhistory&team">Company History</a>
 <br>
