--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,8 @@
   
 </head>
 <body>
-<h1> Christie and Chris’s Cooking Cabin </h1>
+<b> Christie and Chris’s Cooking Cabin </b>
+<br>
 <br>
 <a href="https://ethanhaeberle.github.io/MGMT382group10/companyhistory&team">Company History</a>
 <br>
