--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,7 @@
   
 </head>
 <body bgcolor = "#9DC6D8">
-<b> Christie and Chris’s Cooking Cabin </b>
+<b> <u> Christie and Chris’s Cooking Cabin </u> </b>
 <br>
 <br>
 <a href="https://ethanhaeberle.github.io/MGMT382group10/companyhistory&team">Company History</a>
