--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,7 @@
   
 </head>
 <body bgcolor = "#9DC6D8">
+<font size = "5">
 <b> <u> Christie and Chris’s Cooking Cabin </u> </b>
 <br>
 <br>
@@ -21,5 +22,6 @@
 <br>
 <br>
 <a href="https://ethanhaeberle.github.io/MGMT382group10/teampage">Teampage</a>
+</font>
 </body>
 </html>
