--- a/menu.html
+++ b/menu.html
@@ -8,19 +8,19 @@
 <font size = "5">
 <br>
 <br>
-<a href="https://ethanhaeberle.github.io/MGMT382group10/companyhistory&team">Company History</a>
+<a href="https://ethanhaeberle.github.io/MGMT382group10/companyhistory&team" target = "main">Company History</a>
 <br>
 <br>
-<a href="https://ethanhaeberle.github.io/MGMT382group10/products">Products</a>
+<a href="https://ethanhaeberle.github.io/MGMT382group10/products" target = "main">Products</a>
 <br>
 <br>
-<a href="https://ethanhaeberle.github.io/MGMT382group10/services">Services</a>
+<a href="https://ethanhaeberle.github.io/MGMT382group10/services" target = "main">Services</a>
 <br>
 <br>
-<a href="https://ethanhaeberle.github.io/MGMT382group10/testimonials">Customer testimonials</a>
+<a href="https://ethanhaeberle.github.io/MGMT382group10/testimonials" target = "main">Customer testimonials</a>
 <br>
 <br>
-<a href="https://ethanhaeberle.github.io/MGMT382group10/teampage">Teampage</a>
+<a href="https://ethanhaeberle.github.io/MGMT382group10/teampage" target = "main">Teampage</a>
 </font>
 </body>
 </html>
