--- a/main_content.html
+++ b/main_content.html
@@ -1,1 +1,10 @@
-
+<html>
+<head>
+  
+</head>
+<body>
+<font size = "10"
+<b> Welcome to Christie and Chris’s Cooking Cabin </b>
+</font> 
+</body>
+</html>
