--- a/main_content.html
+++ b/main_content.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <font size = "10"
-<b> Welcome to Christie and Chris’s Cooking Cabin </b>
+<b> Christie and Chris’s Cooking Cabin </b>
 </font> 
 </body>
 </html>
