--- a/main_content.html
+++ b/main_content.html
@@ -1,32 +1,9 @@
 <html>
 <head>
-  <style>
-     body {
-      font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      text-align: center;
-      padding: 50px;
-    }
-    h1 {
-      font-size: 3em;
-      color: #333;
-      margin: 0;
-    }
-    .team-names {
-      font-size: 1.5em;
-      color: #555;
-      margin-top: 20px;
-    }
-  </style> 
 </head>
 <body>
-<div class="container">
-    <h1>Christie and Chris's Cooking Cabin</h1>
-  <p class="team-names">Team 10: Anna Coffey Ethan Haeberle, Bora Kaya, and Bora Schrom/p>
-</div>
+ <div style="text-align: center; padding: 50px;">
+    <h1 style="font-size: 3em; color: #333; margin: 0;">Christie and Chris's Cooking Cabin</h1>
+    <p style="font-size: 1.5em; color: #555; margin-top: 20px;">Team 10: Anna C, Ethan H, Bora S, Bora K</p>
 </body>
 </html>
