--- a/main_content.html
+++ b/main_content.html
@@ -4,6 +4,6 @@
 <body>
  <div style="text-align: center; padding: 50px;">
     <h1 style="font-size: 3em; color: #333; margin: 0;">Christie and Chris's Cooking Cabin</h1>
-    <p style="font-size: 1.5em; color: #555; margin-top: 20px;">Team 10: Anna C, Ethan H, Bora S, Bora K</p>
+    <p> style="font-size: 1.5em; color: #555; margin-top: 20px;">Team 10: Anna C, Ethan H, Bora S, Bora K </p>
 </body>
 </html>
