--- a/products.html
+++ b/products.html
@@ -1,1 +1,48 @@
+<html>
+<head>
+  <title>Company Products</title>
+</head>
+<body style="background-color: #9DC6D8; color: #1D4E89; font-family: Arial, sans-serif;">
+  <div style="text-align: center; padding: 50px;">
+    <h1>Our Products</h1>
+    <ul style="list-style-type: none; padding: 0;">
+      <li>
+        <h2><span style="color: #FF5733;">DIY Cooking Kits</span></h2>
+        <p><span style="font-style: italic;">Pre-packaged kits</span> containing all the necessary ingredients and instructions for a specific recipe or cooking project.</p>
+        <p>Includes:</p>
+        <ul>
+          <li>Recipe cards</li>
+          <li>Ingredients</li>
+          <li>Instructions</li>
+        </ul>
+      </li>
+      <li>
+        <h2><span style="color: #FFC300;">Cooking Equipment</span></h2>
+        <p>Basic cooking tools and utensils such as <span style="text-decoration: underline;">knives</span>, cutting boards, measuring cups, and spatulas.</p>
+        <p>Available in various styles and sizes.</p>
+      </li>
+      <li>
+        <h2><span style="color: #33FF57;">Recipe Books</span></h2>
+        <p>Collections of <span style="font-weight: bold;">beginner-friendly recipes</span> for individuals to try at home.</p>
+        <p>Explore our wide range of recipe collections.</p>
+      </li>
+      <li>
+        <h2><span style="color: #5733FF;">Specialty Ingredients</span></h2>
+        <p>Unique or hard-to-find ingredients used in specific recipes offered by the company.</p>
+        <p>Discover our selection of specialty ingredients.</p>
+      </li>
+      <li>
+        <h2><span style="color: #FF3385;">Branded Merchandise</span></h2>
+        <p>Aprons, oven mitts, and other cooking-related merchandise branded with the company's logo or slogan.</p>
+        <p>Show your support with our branded merchandise!</p>
+      </li>
+    </ul>
+    <p>If you have any questions or feedback, feel free to <a href="mailto:your.coffey27@purdue.edu" style="text-decoration: none; color: #1D4E89;"><u>contact me</u></a>.</p>
+    <p>Last updated: <span id="lastUpdated"></span></p>
+  </div>
 
+  <script>
+    document.getElementById("lastUpdated").innerHTML = document.lastModified;
+  </script>
+</body>
+</html>
