--- a/products.html
+++ b/products.html
@@ -2,12 +2,12 @@
 <head>
   <title>Company Products</title>
 </head>
-<body style="background-color: #9DC6D8; color: #1D4E89; font-family: Arial, sans-serif;">
+<body style="background-color: #ADD8E6; color: #1D4E89; font-family: Arial, sans-serif;">
   <div style="text-align: center; padding: 50px;">
     <h1>Our Products</h1>
     <ul style="list-style-type: none; padding: 0;">
       <li>
-        <h2><span style="color: #FF5733;">DIY Cooking Kits</span></h2>
+        <h2><span style="color: #FF3385;">DIY Cooking Kits</span></h2>
         <p><span style="font-style: italic;">Pre-packaged kits</span> containing all the necessary ingredients and instructions for a specific recipe or cooking project.</p>
         <p>Includes:</p>
         <ul>
@@ -17,12 +17,12 @@
         </ul>
       </li>
       <li>
-        <h2><span style="color: #FFC300;">Cooking Equipment</span></h2>
-        <p>Basic cooking tools and utensils such as <span style="text-decoration: underline;">knives</span>, cutting boards, measuring cups, and spatulas.</p>
+        <h2><span style="color: #5733FF;">Cooking Equipment</span></h2>
+        <p>Basic cooking tools and utensils such as <span style="text-decoration: underline;">knives, cutting boards, measuring cups, and spatulas.</span></p>
         <p>Available in various styles and sizes.</p>
       </li>
       <li>
-        <h2><span style="color: #33FF57;">Recipe Books</span></h2>
+        <h2><span style="color: #FF3385;">Recipe Books</span></h2>
         <p>Collections of <span style="font-weight: bold;">beginner-friendly recipes</span> for individuals to try at home.</p>
         <p>Explore our wide range of recipe collections.</p>
       </li>
@@ -37,7 +37,11 @@
         <p>Show your support with our branded merchandise!</p>
       </li>
     </ul>
+    <br>
+    <br>
     <p>If you have any questions or feedback, feel free to <a href="mailto:your.coffey27@purdue.edu" style="text-decoration: none; color: #1D4E89;"><u>contact me</u></a>.</p>
+    <br>
+    <br>
     <p>Last updated: <span id="lastUpdated"></span></p>
   </div>
 
