--- a/products.html
+++ b/products.html
@@ -8,7 +8,7 @@
     <ul style="list-style-type: none; padding: 0;">
       <li>
         <h2><span style="color: #FF3385;">DIY Cooking Kits</span></h2>
-        <p><span style="font-style: italic;">Pre-packaged kits</span> containing all the necessary ingredients and instructions for a specific recipe or cooking project.</p>
+        <p><span style="font-style: italic; font-size: 14px;">Pre-packaged kits</span> containing all the necessary ingredients and instructions for a specific recipe or cooking project.</p>
         <p>Includes:</p>
         <ul>
           <li>Recipe cards</li>
@@ -23,7 +23,7 @@
       </li>
       <li>
         <h2><span style="color: #FF3385;">Recipe Books</span></h2>
-        <p>Collections of <span style="font-weight: bold;">beginner-friendly recipes</span> for individuals to try at home.</p>
+        <p><span style="font-weight: bold; font-size: 14px;">Collections of beginner-friendly recipes</span> for individuals to try at home.</p>
         <p>Explore our wide range of recipe collections.</p>
       </li>
       <li>
