--- a/menu.html
+++ b/menu.html
@@ -4,8 +4,8 @@
 <head>
   
 </head>
-<body bgcolor = "#9DC6D8">
-<font size = "5">
+<body bgcolor = "#1D4E89">
+<font size = "5" color="#FFFFFF">
 <br>
 <br>
 <a href="https://ethanhaeberle.github.io/MGMT382group10/companyhistory&team" target = "main">Company History</a>
