--- a/menu.html
+++ b/menu.html
@@ -7,6 +7,9 @@
 <font size = "5" color="#FFFFFF">
 <br>
 <br>
+<a href="https://ethanhaeberle.github.io/MGMT382group10/main_content" target = "main">HOME</a>
+<br>
+<br>
 <a href="https://ethanhaeberle.github.io/MGMT382group10/companyhistory&team" target = "main">Company History</a>
 <br>
 <br>
@@ -19,7 +22,6 @@
 <a href="https://ethanhaeberle.github.io/MGMT382group10/testimonials" target = "main">Customer testimonials</a>
 <br>
 <br>
-<a href="https://ethanhaeberle.github.io/MGMT382group10/teampage" target = "main">Teampage</a>
 </font>
 </body>
 </html>
