--- a/menu.html
+++ b/menu.html
@@ -22,6 +22,10 @@
 <a href="https://ethanhaeberle.github.io/MGMT382group10/testimonials" target = "main">Customer testimonials</a>
 <br>
 <br>
+<p>Last updated: <span id="lastUpdated"></span></p>
+  <script>
+    document.getElementById("lastUpdated").innerHTML = document.lastModified;
+  </script>
 </font>
 </body>
 </html>
