--- a/menu.html
+++ b/menu.html
@@ -3,8 +3,8 @@
 <head>
   
 </head>
-<body bgcolor = "#1D4E89">
-<font size = "5" color="#FFFFFF">
+<body bgcolor = "#FFFFFF">
+<font size = "5">
 <br>
 <br>
 <a href="https://ethanhaeberle.github.io/MGMT382group10/main_content" target = "main">HOME</a>
@@ -22,7 +22,9 @@
 <a href="https://ethanhaeberle.github.io/MGMT382group10/testimonials" target = "main">Customer testimonials</a>
 <br>
 <br>
+</font>
 <p>Last updated: <span id="lastUpdated"></span></p>
+ 
   <script>
     document.getElementById("lastUpdated").innerHTML = document.lastModified;
   </script>
