--- a/testimonials.html
+++ b/testimonials.html
@@ -4,42 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer Testimonials</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-    </style>
 </head>
 <body>
 
 <header>
-    <h1>Customer Testimonials</h1>
+    <h1 style="color: #fff;">Customer Testimonials</h1>
 </header>
 
-<div class="container">
-    <h2>Please Read Our Raving Reviews!</h2>
-    <p> <u><b>Customer 1:</b></u>
-    <i>C&C's cooking cabin always knows exactly what I need for my next recipe!</i></p>
-    
+<div style="max-width: 800px; margin: 20px auto; padding: 20px; background-color: #fff; border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
+    <h2>Please Read Our <span style="color: #FF5722;">Raving Reviews!</span></h2>
+    <div style="margin-top: 20px; padding: 10px; border-left: 3px solid #333; overflow: hidden;">
+        <img src="customer1.jpg" alt="Customer 1" style="width: 100px; height: 100px; border-radius: 50%; margin-right: 10px; float: left;">
+        <div style="margin-left: 120px;">
+            <div style="font-weight: bold; color: #FF5722;"><span style="text-decoration: underline;">Customer 1:</span></div>
+            <div style="font-style: italic; color:">
+                <p>C&C's cooking cabin always knows exactly what I need for my next recipe! 
+                From selling the proper tools to personalized tutorials C&C's makes sure I never fail to 
+                impress all my friends. Thank you C&C's!</p>
+                <span style="font-family: 'Courier New', Courier, monospace;">-Jane doe</span>
+            </div>
+        </div>
+    </div>
 </div>
 
 </body>
 </html>
 
+<span style="font-family: 'Courier New', Courier, monospace;"></span>
