--- a/testimonials.html
+++ b/testimonials.html
@@ -8,20 +8,58 @@
 <body>
 
 <header>
-    <h1 style="color: #fff;">Customer Testimonials</h1>
+    <h1 style="color: #fff; background-color: #333; padding: 10px 0; text-align: center;">Customer Testimonials</h1>
 </header>
 
-<div style="max-width: 800px; margin: 20px auto; padding: 20px; background-color: #fff; border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
-    <h2>Please Read Our <span style="color: #FF5722;">Raving Reviews!</span></h2>
-    <div style="margin-top: 20px; padding: 10px; border-left: 3px solid #333; overflow: hidden;">
-        <img src="customer1.jpg" alt="Customer 1" style="width: 100px; height: 100px; border-radius: 50%; margin-right: 10px; float: left;">
-        <div style="margin-left: 120px;">
-            <div style="font-weight: bold; color: #FF5722;"><span style="text-decoration: underline;">Customer 1:</span></div>
-            <div style="font-style: italic; color:">
-                <p>C&C's cooking cabin always knows exactly what I need for my next recipe! 
-                From selling the proper tools to personalized tutorials C&C's makes sure I never fail to 
-                impress all my friends. Thank you C&C's!</p>
-                <span style="font-family: 'Courier New', Courier, monospace;">-Jane doe</span>
+<div style="background-color: #ADD8E6; padding: 20px; text-align: center;">
+    <div style="max-width: 800px; margin: 0 auto;">
+        <div style="max-width: 960px; padding: 20px; background-color: #fff; border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
+            <h2 style="color: #FF5722;">Please Read Our Raving Reviews!</h2>
+            <div style="margin-top: 20px; padding: 10px; border-left: 3px solid #333;">
+                <img src="customer1.jpg" alt="Customer 1" style="width: 100px; height: 100px; border-radius: 50%; margin-right: 10px; float: left;">
+                <div style="margin-left: 120px;">
+                    <div style="font-weight: bold; color: #FF5722; text-decoration: underline;">Customer 1:</div>
+                    <div style="font-style: italic;">
+                        <p>C&C's cooking cabin always knows exactly what I need for my next recipe! 
+                        From selling the proper tools to personalized tutorials C&C's makes sure I never fail to 
+                        impress all my friends. Thank you C&C's!</p>
+                        <span style="font-family: 'Courier New', Courier, monospace;">- Jane Doe</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div style="display: inline-block; margin: 0 auto;">
+            <div style="max-width: 960px; padding: 20px; background-color: #fff; border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
+                <div style="margin-top: 20px; padding: 10px; border-left: 3px solid #333;">
+                    <img src="customer2.jpg" alt="Customer 2" style="width: 100px; height: 100px; border-radius: 50%; margin-right: 10px; float: left;">
+                    <div style="margin-left: 120px;">
+                        <div style="font-weight: bold; color: #FF5722; text-decoration: underline;">Customer 2:</div>
+                        <div style="font-style: italic;">
+                            <p>C&C's cooking cabin always knows exactly what I need for my next recipe! 
+                            From selling the proper tools to personalized tutorials C&C's makes sure I never fail to 
+                            impress all my friends. Thank you C&C's!</p>
+                            <span style="font-family: 'Courier New', Courier, monospace;">- John Smith</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div style="display: inline-block; margin: 0 auto;">
+            <div style="max-width: 800px; padding: 20px; background-color: #fff; border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
+                <div style="margin-top: 20px; padding: 10px; border-left: 3px solid #333;">
+                    <img src="customer3.jpg" alt="Customer 3" style="width: 100px; height: 100px; border-radius: 50%; margin-right: 10px; float: left;">
+                    <div style="margin-left: 120px;">
+                        <div style="font-weight: bold; color: #FF5722; text-decoration: underline;">Customer 3:</div>
+                        <div style="font-style: italic;">
+                            <p>C&C's cooking cabin always knows exactly what I need for my next recipe! 
+                            From selling the proper tools to personalized tutorials C&C's makes sure I never fail to 
+                            impress all my friends. Thank you C&C's!</p>
+                            <span style="font-family: 'Courier New', Courier, monospace;">- Sarah Johnson</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -29,5 +67,3 @@
 
 </body>
 </html>
-
-<span style="font-family: 'Courier New', Courier, monospace;"></span>
