--- a/services.html
+++ b/services.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-       <title> Our Services </title>         
+       <title> Our Services </title>
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
     </head>
 
 
@@ -10,7 +11,7 @@
         
     </body>
 
-    <h2> Our Services </h2>
+    
 
 
 
