--- a/services.html
+++ b/services.html
@@ -8,6 +8,8 @@
 
 
     <body>
+        <b> CC's Cooking Cabin has a variety of offerings to everyone, including you! 
+        Check out some of our <i> services </i> below: </b>
         
     </body>
 
