--- a/services.html
+++ b/services.html
@@ -8,7 +8,8 @@
 
 
     <body>
-        <b> CC's Cooking Cabin has a variety of offerings to everyone, including you! 
+        <b> <u> CC's Cooking Cabin </u> has a variety of offerings to everyone, including you! 
+        <br>
         Check out some of our <i> services </i> below: </b>
         
     </body>
