--- a/services.html
+++ b/services.html
@@ -4,6 +4,7 @@
         <title> Our Services </title>
     </head>
     <body>
+        <h1> Our Services </h1>
         <br><br><br><br><br>
         <b> <u>CC's Cooking Cabin</u> has a variety of offerings to everyone, including you! 
         <br>
