--- a/services.html
+++ b/services.html
@@ -3,9 +3,10 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title> Our Services </title>
     </head>
-    <body>
+    <body bgcolor: ADD8E6;>
         <h1> Our Services </h1>
-        <br><br><br><br><br>
+        <br>
+        <br>
         <b> <u>CC's Cooking Cabin</u> has a variety of offerings to everyone, including you! 
         <br>
         Check out some of our <i> services </i> below: </b> 
