--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title> Our Services </title>
     </head>
-    <body bgcolor: ADD8E6;>
+    <body style="background-color: ADD8E6;">
         <h1> Our Services </h1>
         <br>
         <br>
