--- a/services.html
+++ b/services.html
@@ -4,12 +4,11 @@
         <title> Our Services </title>
     </head>
     <body style="background-color: #ADD8E6;">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <h1> Our Services </h1>
         <br>
         <br>
-        <b> <u>CC's Cooking Cabin</u> has a variety of offerings to everyone, including you! 
+        <font style="color: #1D4E89;"><b> <u>CC's Cooking Cabin</u> has a variety of offerings to everyone, including you! 
         <br>
-        Check out some of our <i> services </i> below: </b> 
+        Check out some of our <i> services </i> below: </b> </font>
     </body>
 </html>
