--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
         <title> Our Services </title>
     </head>
     <body style="background-color: #ADD8E6;">
-        <h1> Our Services </h1>
+        <h1 syle="color: #5733FF;"> Our Services </h1>
         <br>
         <br>
         <font style="color: #1D4E89;"><b> <u>CC's Cooking Cabin</u> has a variety of offerings to everyone, including you! 
