--- a/services.html
+++ b/services.html
@@ -4,11 +4,13 @@
         <title> Our Services </title>
     </head>
     <body style="background-color: #ADD8E6;">
+        <div class="content">
         <h1 syle="color: #5733FF;"> Our Services </h1>
         <br>
         <br>
         <font style="color: #1D4E89;"><b> <u>CC's Cooking Cabin</u> has a variety of offerings to everyone, including you! 
         <br>
         Check out some of our <i> services </i> below: </b> </font>
+        </div>
     </body>
 </html>
