--- a/testimonials.html
+++ b/testimonials.html
@@ -11,7 +11,7 @@
     <h1 style="color: #fff; background-color: #333; padding: 10px 0; text-align: center;">Customer Testimonials</h1>
 </header>
 
-<h2 style="color: #FF3385;">Please Read Our Raving Reviews!</h2>
+<h2 style="color: #FF3385; text-align: center;">Please Read Our Raving Reviews!</h2>
 
 <div style="background-color: #ADD8E6; padding: 20px; text-align: center;">
     <div style="max-width: 960px; margin: 0 auto;">
