--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
         <h1 syle="color: #5733FF;"> Our Services </h1>
         <br>
         <br>
-        <font style="color: #1D4E89;"><b> <u>CC's Cooking Cabin</u> has a variety of offerings to everyone, including you! 
+        <font style="color: #1D4E89; size="5"><b> <u>CC's Cooking Cabin</u> has a variety of offerings to everyone, including you! 
         <br>
         Check out some of our <i> services </i> below: </b> </font>
         </div>
