--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
     </head>
     <body style="background-color: #ADD8E6;">
         <div class="content">
-        <h1 style="color: #5733FF;"> Our Services </h1>
+        <h1 style="color: #1FF3385;"> Our Services </h1>
         <br>
         <br>
         <font style="color: #1D4E89; size="5"><b> <u>CC's Cooking Cabin</u> has a variety of offerings to everyone, including you! 
@@ -13,7 +13,7 @@
         Check out some of our <i> services </i> below: </b> </font>
         <br>
         <br>
-        
+        <p style="font-family: Courier, monospace;">
         </div>
     </body>
 </html>
