--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
         <h1 style="color: #1FF3385;"> Our Services </h1>
         <br>
         <br>
-        <font style="color: #1D4E89; size="20"><b> <u>CC's Cooking Cabin</u> has a variety of offerings to everyone, including you! 
+        <font style="color: #1D4E89; size=20;"><b> <u>CC's Cooking Cabin</u> has a variety of offerings to everyone, including you! 
         <br>
         Check out some of our <i> services </i> below: </b> </font>
         <br>
