--- a/services.html
+++ b/services.html
@@ -13,7 +13,18 @@
         Check out some of our <i> services </i> below: </b> </font>
         <br>
         <br>
-        <p style="font-family: Courier, monospace;">
+        <h3 style="color: #1FF3385;"> Cooking Classes </h3>
+        <br>
+        <p style="font-family: Courier, monospace;"> Virtual cooking classes led by professional cooking instructors covering the 
+            fundamentals of cooking techniques</p>
+        <br>
+        <br>
+        <h3 style="color: #1FF3385;"> Cooking Workshops </h3>
+        <br>
+        <p style="font-family: Courier, monospace;"> In-person and hands-on cooking workshops designed to improve your culinary skills
+            and reinforce your learning from the <u>Cooking Classes</u>
+        <br>
+        <br>
         </div>
     </body>
 </html>
