--- a/services.html
+++ b/services.html
@@ -13,16 +13,23 @@
         Check out some of our <i> services </i> below: </b> </font>
         <br>
         <br>
-        <h3 style="color: #1FF3385;"> Cooking Classes </h3>
+        <h2 style="color: #1FF3385;"> Cooking Classes </h2>
         <p style="font-family: Courier, monospace;"> Virtual cooking classes led by professional cooking instructors covering the 
             fundamentals of cooking techniques</p>
         <br>
         <br>
-        <h3 style="color: #1FF3385;"> Cooking Workshops </h3>
-        <p style="font-family: Courier, monospace;"> In-person and hands-on cooking workshops designed to improve your culinary skills
+        <h2 style="color: #1FF3385;"> Cooking Workshops </h2>
+        <p style="font-family: Arial, sans-serif;"> In-person and hands-on cooking workshops designed to improve your culinary skills
             and reinforce your learning from the <u>Cooking Classes</u>
         <br>
         <br>
+        <h2 style="color: #1FF3385;"> Culinary Tours </h2>
+        <p style="font-family: Baskerville;"> With our arranged guides which have great expertise in their respective areas, you
+            have a chance to visit local markets, farmers markets, food shops, wineries and get exposed to some of the very important 
+            culinary landmarks in regions that you want, you can join these tours alone, or with friends/family! </p>
+        <br>
+        <br>
+
         </div>
     </body>
 </html>
