--- a/services.html
+++ b/services.html
@@ -24,7 +24,7 @@
         <br>
         <br>
         <h2 style="color: #1FF3385;"> Culinary Tours </h2>
-        <p style="font-family: Baskerville;"> With our arranged guides which have great expertise in their respective areas, you
+        <p style="font-family: Courier;"> With our arranged guides which have great expertise in their respective areas, you
             have a chance to visit local markets, farmers markets, food shops, wineries and get exposed to some of the very important 
             culinary landmarks in regions that you want, you can join these tours alone, or with friends/family! </p>
         <br>
