--- a/services.html
+++ b/services.html
@@ -13,11 +13,11 @@
         Check out some of our <i> services </i> below: </b> </font>
         <br>
         <br>
-        <h2 style="color: #1FF3385;"> Cooking Classes </h2>
+        <h2 style="color: #1F5733FF"> Cooking Classes </h2>
         <p style="font-family: Arial, sans-serif; color: #1D4E89;"> Virtual cooking classes led by professional cooking instructors covering the 
             fundamentals of cooking techniques</p>
         <br>
-        <h2 style="color: #1FF3385;"> Cooking Workshops </h2>
+        <h4 style="color: #1FF3385;"> Cooking Workshops </h4>
         <p style="font-family: Arial, sans-serif; color: #1D4E89;"> In-person and hands-on cooking workshops designed to improve your culinary skills
             and reinforce your learning from the <u>Cooking Classes</u>
         <br>
