--- a/services.html
+++ b/services.html
@@ -15,16 +15,20 @@
         <br>
         <h2 style="color: #1F5733FF"> Cooking Classes </h2>
         <p style="font-family: Arial, sans-serif; color: #1D4E89;"> Virtual cooking classes led by professional cooking instructors covering the 
-            fundamentals of cooking techniques</p>
+            fundamentals of cooking techniques.</p>
         <br>
         <h4 style="color: #1FF3385;"> Cooking Workshops </h4>
         <p style="font-family: Arial, sans-serif; color: #1D4E89;"> In-person and hands-on cooking workshops designed to improve your culinary skills
-            and reinforce your learning from the <u>Cooking Classes</u>
+            and reinforce your learning from the <u>Cooking Classes</u>.</p>
         <br>
         <h2 style="color: #1FF3385;"> Culinary Tours </h2>
         <p style="font-family: Arial, sans-serif; color: #1D4E89;"> With our arranged guides which have great expertise in their respective areas, you
             have a chance to visit local markets, farmers markets, food shops, wineries and get exposed to some of the very important 
-            culinary landmarks in regions that you want, you can join these tours alone, or with friends/family! </p>
+            culinary landmarks in regions that you want, you can join these tours alone, or with friends/family!</p>
+        <br>
+        <p style="font-family: Arial, sans-serif; color: #1D4E89;"> For more information about pricing and availability please contact the email address
+            provided below and you should receive a reply in 3-5 business days.</p>
+        <p> Contact Us </p>
         </div>
     </body>
 </html>
