--- a/services.html
+++ b/services.html
@@ -13,22 +13,29 @@
         Check out some of our <i> services </i> below: </b> </font>
         <br>
         <br>
-        <h3 style="color: blue"> Cooking Classes </h3>
-        <p style="font-family: Arial, sans-serif; color: #1D4E89;"> Virtual cooking classes led by professional cooking instructors covering the 
-            fundamentals of cooking techniques.</p>
+        <ul>
+        <li>
+            <h3 style="color: blue"> Cooking Classes </h3>
+            <p style="font-family: Arial, sans-serif; color: #1D4E89;"> Virtual cooking classes led by professional cooking instructors covering the 
+            fundamentals of cooking techniques.</p></li>
         <br>
-        <h3 style="color: blue;"> Cooking Workshops </h3>
-        <p style="font-family: Arial, sans-serif; color: #1D4E89;"> In-person and hands-on cooking workshops designed to improve your culinary skills
-            and reinforce your learning from the <u>Cooking Classes</u>.</p>
+        <li>
+            <h3 style="color: blue;"> Cooking Workshops </h3>
+            <p style="font-family: Arial, sans-serif; color: #1D4E89;"> In-person and hands-on cooking workshops designed to improve your culinary skills
+            and reinforce your learning from the <u>Cooking Classes</u>.</p></li>
         <br>
-        <h3 style="color: blue;"> Culinary Tours </h3>
-        <p style="font-family: Arial, sans-serif; color: #1D4E89;"> With our arranged guides which have great expertise in their respective areas, you
+        <li>
+            <h3 style="color: blue;"> Culinary Tours </h3>
+            <p style="font-family: Arial, sans-serif; color: #1D4E89;"> With our arranged guides which have great expertise in their respective areas, you
             have a chance to visit local markets, farmers markets, food shops, wineries and get exposed to some of the very important 
-            culinary landmarks in regions that you want, you can join these tours alone, or with friends/family!</p>
+            culinary landmarks in regions that you want, you can join these tours alone, or with friends/family!</p></li>
         <br>
         <p style="font-family: Arial, sans-serif; color: #1D4E89;"> For more information about pricing and availability please contact the email address
             provided below and you should receive a reply in 3-5 business days.</p>
-        <p> Contact Us </p>
+        <ol>
+            <li> Contact Us </li>
+            <li> Get More Information </li>
+        </ol>
         </div>
     </body>
 </html>
