--- a/services.html
+++ b/services.html
@@ -33,8 +33,8 @@
         <p style="font-family: Arial, sans-serif; color: #1D4E89;"> For more information about pricing and availability please contact the email address
             provided below and you should receive a reply in 3-5 business days.</p>
         <ol>
-            <li> Contact Us </li>
-            <li> Get More Information </li>
+            <li style="font-family: Georgia, serif; color: white;"> Contact Us </li>
+            <li style="font-family: Georgia, serif; color: white;"> Get More Information </li>
         </ol>
         </div>
     </body>
