--- a/services.html
+++ b/services.html
@@ -8,14 +8,14 @@
         <h1 style="color: #1FF3385;"> Our Services </h1>
         <br>
         <br>
-        <font style="color: #1D4E89; size=20;"><b> <u>CC's Cooking Cabin</u> has a variety of offerings to everyone, including you! 
+        <font style="color: #1D4E89;"><b> <u>CC's Cooking Cabin</u> has a variety of offerings to everyone, including you! 
         <br>
         Check out some of our <i> services </i> below: </b> </font>
         <br>
         <br>
         <ul>
         <li>
-            <h3 style="color: blue"> Cooking Classes </h3>
+            <h3 style="color: blue;"> Cooking Classes </h3>
             <p style="font-family: Arial, sans-serif; color: #1D4E89;"> Virtual cooking classes led by professional cooking instructors covering the 
             fundamentals of cooking techniques.</p></li>
         <br>
@@ -33,8 +33,8 @@
         <p style="font-family: Arial, sans-serif; color: #1D4E89;"> You can find information about pricing below. For more information about pricing and availability please contact the email address
             provided below and you should receive a reply in 3-5 business days.</p>
         <ol style= "text-align: left";>
-            <li style="font-family: Georgia, serif; color: white;"> Contact Us </li>
-            <li style="font-family: Georgia, serif; color: white;"> Get More Information </li>
+            <li style="font-family: Georgia, serif; color: white; size: 30;"> Contact Us </li>
+            <li style="font-family: Georgia, serif; color: white; size: 10;"> Get More Information </li>
         </ol>
         </div>
     </body>
