--- a/services.html
+++ b/services.html
@@ -32,6 +32,8 @@
         <br>
         <p style="font-family: Arial, sans-serif; color: #1D4E89;"> You can find information about pricing below. For more information about pricing and availability please contact the email address
             provided below and you should receive a reply in 3-5 business days.</p>
+        <br>
+        <img src = "MGMT382_picture.png>  
         <ol style= "text-align: left";>
             <li style="font-family: Georgia, serif; color: white; size: 30;"> Contact Us </li>
             <li style="font-family: Georgia, serif; color: white; size: 10;"> Get More Information </li>
