--- a/services.html
+++ b/services.html
@@ -36,7 +36,7 @@
         <img src = "MGMT382_picture.png>  
         <ol style= "text-align: left";>
             <li style="font-family: Georgia, serif; color: white; size: 30;"> Contact Us </li>
-            <li style="font-family: Georgia, serif; color: white; size: 10;"> Get More Information </li>
+            <li style="font-family: Georgia, serif; color: #FF6E4F; size: 10;"> Get More Information </li>
         </ol>
         </div>
     </body>
