--- a/products.html
+++ b/products.html
@@ -39,7 +39,7 @@
     </ul>
     <br>
     <br>
-    <p>If you have any questions or feedback, feel free to <a href="mailto:your.coffey27@purdue.edu" style="text-decoration: none; color: #1D4E89;"><u>contact me</u></a>.</p>
+    <p>If you have any questions or feedback, feel free to <a href="mailto:coffey27@purdue.edu" style="text-decoration: none; color: #1D4E89;"><u>contact me</u></a>.</p>
     <br>
     <br>
     <p>Last updated: <span id="lastUpdated"></span></p>
