--- a/services.html
+++ b/services.html
@@ -36,7 +36,7 @@
         <img src = "MGMT382_picture.jpg>  
         <ol style= "text-align: left;">
             <li style="font-family: Georgia, serif; color: white;"> Contact Us </li>
-            <li style="font-family: Georgia, serif; color: #FF6E4F;"> Get More Information </li>
+            <li style="font-family: Georgia, serif; color: white;"> Get More Information </li>
         </ol>
         </div>
     </body>
