--- a/services.html
+++ b/services.html
@@ -30,13 +30,13 @@
             have a chance to visit local markets, farmers markets, food shops, wineries and get exposed to some of the very important 
             culinary landmarks in regions that you want, you can join these tours alone, or with friends/family!</p></li>
         <br>
-        <p style="font-family: Arial, sans-serif; color: #1D4E89;"> You can find information about pricing below. For more information about pricing and availability please contact the email address
+        <p style="font-family: Georgia, serif; color: #1D4E89;"> You can find information about pricing below. For more information about pricing and availability please contact the email address
             provided below and you should receive a reply in 3-5 business days.</p>
         <br>
         <img src = "MGMT382_picture.jpg>  
         <ol style= "text-align: left;">
-            <li style="font-family: Georgia, serif; color: white;"> Contact Us </li>
-            <li style="font-family: Georgia, serif; color: white;"> Get More Information </li>
+            <li style="color: white;"> Contact Us </li>
+            <li style="color: white;"> Get More Information </li>
         </ol>
         </div>
     </body>
