--- a/products.html
+++ b/products.html
@@ -25,6 +25,8 @@
         <h2><span style="color: #FF3385;">Recipe Books</span></h2>
         <p><span style="font-weight: bold; font-size: 14px;">Collections of beginner-friendly recipes</span> for individuals to try at home.</p>
         <p>Explore our wide range of recipe collections.</p>
+        <p>Check out our Recipes!</p>
+        <p><a href="Recipes.pdf" target="_blank">Open Recipes PDF</a></p>
       </li>
       <li>
         <h2><span style="color: #5733FF;">Specialty Ingredients</span></h2>
