--- a/services.html
+++ b/services.html
@@ -8,10 +8,9 @@
         <h1 style="color: #1FF3385;"> Our Services </h1>
         <br>
         <br>
-        <font style="color: #1D4E89;"><b> <u>CC's Cooking Cabin</u> has a variety of offerings to everyone, including you! 
+        <font style="color: #1D4E89; font-family: Georgia, serif"><b> <u>CC's Cooking Cabin</u> has a variety of offerings to everyone, including you! 
         <br>
         Check out some of our <i> services </i> below: </b> </font>
-        <br>
         <br>
         <ul>
         <li>
@@ -28,7 +27,9 @@
             <h3 style="color: blue;"> Culinary Tours </h3>
             <p style="font-family: Arial, sans-serif; color: #1D4E89;"> With our arranged guides which have great expertise in their respective areas, you
             have a chance to visit local markets, farmers markets, food shops, wineries and get exposed to some of the very important 
-            culinary landmarks in regions that you want, you can join these tours alone, or with friends/family!</p></li>
+            culinary landmarks in regions that you want, you can join these tours alone, or with friends/family!</p>
+        </li>
+        </ul>
         <br>
         <p style="font-family: Georgia, serif; color: #1D4E89;"> You can find information about pricing below. For more information about pricing and availability please contact the email address
             provided below and you should receive a reply in 3-5 business days.</p>
