--- a/services.html
+++ b/services.html
@@ -34,7 +34,7 @@
         <p style="font-family: Georgia, serif; color: #1D4E89;"> You can find information about pricing below. For more information about pricing and availability please contact the email address
             provided below and you should receive a reply in 3-5 business days.</p>
         <br>
-        <img src = "MGMT382_picture.jpg>  
+        <img src = "MGMT382_picture.jpg" width = 480 height = 360>  
         <ol style= "text-align: left;">
             <li style="color: white;"> Contact Us </li>
             <li style="color: white;"> Get More Information </li>
