--- a/products.html
+++ b/products.html
@@ -20,6 +20,7 @@
         <h2><span style="color: #5733FF;">Cooking Equipment</span></h2>
         <p>Basic cooking tools and utensils such as <span style="text-decoration: underline;">knives, cutting boards, measuring cups, and spatulas.</span></p>
         <p>Available in various styles and sizes.</p>
+        <p> Read more about the most useful cooking utensil <a href="https://www.foodnetwork.com/how-to/packages/shopping/list-all-most-useful-kitchen-utensils" target="_blank">here</a>.</p>
       </li>
       <li>
         <h2><span style="color: #FF3385;">Recipe Books</span></h2>
