--- a/main_content.html
+++ b/main_content.html
@@ -5,5 +5,6 @@
  <div style="text-align: center; padding: 50px;">
     <h1 style="font-size: 3em; color: #333; margin: 0;">Christie and Chris's Cooking Cabin</h1>
     <p style="font-size: 1.5em; color: #555; margin-top: 20px;">Team 10: Anna C, Ethan H, Bora S, Bora K </p>
+    <img src = "MGMT382Logo.jpg" width = 360 height = 480>
 </body>
 </html>
